--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <button class="closeButton"></button>
     <div class="popup__container">
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" action="">
+      <form class="popup__form">
         <fieldset class="popup__name">
           <input class="popup__info" type="text" name="name" placeholder="Имя" value="Жак-Ив Кусто">
         </fieldset>
