--- a/index.html
+++ b/index.html
@@ -7,88 +7,85 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Место</title>
 </head>
-<body class="page">
-  <header class="header">
-    <img class="header__logo" src="./pictures/logo.png" alt="Логотип">
-    <hr class="header__line">
-  </header>
-  <main class="content">
-    <section class="profile">
-      <div class="profile__personal">
+<body>
+  <div class="page">
+    <header class="header">
+      <img class="header__logo" src="./pictures/logo.svg" alt="Логотип">
+    </header>
+    <main class="content">
+      <section class="profile">
         <img class="profile__avatar" src="./pictures/avatar.jpeg" alt="Аватар">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="editButton"><img src="./pictures/write.png" alt="Кнопка редактирования"></button>
+        <button class="edit-button" type="button"><img class="image__edit" src="./pictures/editButton.svg" alt="Кнопка редактирования"></button>
+        <button class="add-button" type="button"><img class="omage__add" src="./pictures/addButton.svg" alt="Кнопка добавления"></button>
+      </section>
+      <section class="elements">
+        <article class="element">
+          <img class="element__image" src="./pictures/moscow.jpg" alt="Москва">
+          <div class="element__info">
+            <h2 class="element__title">Москва</h2>
+            <button class="like-button" type="button"></button>
+          </div>
+        </article>
+        <article class="element">
+          <img class="element__image" src="./pictures/petersburg.jpg" alt="Санкт-Петербург">
+          <div class="element__info">
+            <h2 class="element__title">Санкт-Петербург</h2>
+            <button class="like-button" type="button"></button>
+          </div>
+        </article>
+        <article class="element">
+          <img class="element__image" src="./pictures/sochi.jpg" alt="Сочи">
+          <div class="element__info">
+            <h2 class="element__title">Сочи</h2>
+            <button class="like-button" type="button"></button>
+          </div>
+        </article>
+        <article class="element">
+          <img class="element__image" src="./pictures/suzdal.jpg" alt="Суздаль">
+          <div class="element__info">
+            <h2 class="element__title">Суздаль</h2>
+            <button class="like-button" type="button"></button>
+          </div>
+        </article>
+        <article class="element">
+          <img class="element__image" src="./pictures/tula.jpg" alt="Тула">
+          <div class="element__info">
+            <h2 class="element__title">Тула</h2>
+            <button class="like-button" type="button"></button>
+          </div>
+        </article>
+        <article class="element">
+          <img class="element__image" src="./pictures/konstantinovo.jpg" alt="Константиново">
+          <div class="element__info">
+            <h2 class="element__title">Константиново</h2>
+            <button class="like-button" type="button"></button>
+          </div>
+        </article>
+      </section>
+    </main>
+    <footer class="footer">
+      <p class="footer__copyright">© 2020 Mesto Russia</p>
+    </footer>
+    <section class="popup">
+      <div class="popup__container">
+        <button class="close-button" type="button"></button>
+        <h3 class="popup__title">Редактировать профиль</h3>
+        <form class="form">
+          <fieldset class="form__info">
+            <input class="form__input form__name" type="text" id="name" placeholder="Имя" value="Жак-Ив Кусто">
+            <input class="form__input form__about" type="text" id="work" placeholder="О себе" value="Исследователь океана">
+          </fieldset>
+          <fieldset class="form__handler">
+            <button class="submit-button" type="submit">Сохранить</button>
+          </fieldset>
+        </form>
       </div>
-      <button class="addButton"><img src="./pictures/plus.png" alt=""></button>
     </section>
-    <section class="elements">
-      <article class="element">
-        <img class="element__image" src="./pictures/moscow.jpg" alt="Москва">
-        <div class="element__info">
-          <h2 class="element__title">Москва</h2>
-          <button class="likeButton"><img src="./pictures/like.png" alt="Лайк"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img class="element__image" src="./pictures/petersburg.jpg" alt="Санкт-Петербург">
-        <div class="element__info">
-          <h2 class="element__title">Санкт-Петербург</h2>
-          <button class="likeButton"><img src="./pictures/like.png" alt="Лайк"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img class="element__image" src="./pictures/sochi.jpg" alt="Сочи">
-        <div class="element__info">
-          <h2 class="element__title">Сочи</h2>
-          <button class="likeButton"><img src="./pictures/like.png" alt="Лайк"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img class="element__image" src="./pictures/suzdal.jpg" alt="Суздаль">
-        <div class="element__info">
-          <h2 class="element__title">Суздаль</h2>
-          <button class="likeButton"><img src="./pictures/like.png" alt="Лайк"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img class="element__image" src="./pictures/tula.jpg" alt="Тула">
-        <div class="element__info">
-          <h2 class="element__title">Тула</h2>
-          <button class="likeButton"><img src="./pictures/like.png" alt="Лайк"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img class="element__image" src="./pictures/konstantinovo.jpg" alt="Константиново">
-        <div class="element__info">
-          <h2 class="element__title">Константиново</h2>
-          <button class="likeButton"><img src="./pictures/like.png" alt="Лайк"></button>
-        </div>
-      </article>
-    </section>
-  </main>
-  <footer class="footer">
-    <p class="footer__copyright">© 2020 Mesto Russia</p>
-  </footer>
-  <section class="popup">
-    <button class="closeButton"></button>
-    <div class="popup__container">
-      <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form">
-        <fieldset class="popup__name">
-          <input class="popup__info" type="text" name="name" placeholder="Имя" value="Жак-Ив Кусто">
-        </fieldset>
-        <fieldset class="popup__work">
-          <input class="popup__about" type="text" name="work" placeholder="О себе" value="Исследователь океана">
-        </fieldset>
-        <fieldset class="popup__button">
-          <button class="submitButton" type="submit">Сохранить</button>
-        </fieldset>
-      </form>
-    </div>
-  </section>
-  <script src="./index.js"></script>
+  </div>
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
