--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="edit-button" type="button"><img class="image__edit" src="./pictures/editButton.svg" alt="Кнопка редактирования"></button>
-        <button class="add-button" type="button"><img class="omage__add" src="./pictures/addButton.svg" alt="Кнопка добавления"></button>
+        <button type="button"><img class="image__edit" src="./pictures/editButton.svg" alt="Кнопка редактирования"></button>
+        <button type="button"><img class="omage__add" src="./pictures/addButton.svg" alt="Кнопка добавления"></button>
       </section>
       <section class="elements">
         <article class="element">
