--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <h3 class="popup__title">Редактировать профиль</h3>
         <form class="form">
           <fieldset class="form__info">
-            <input class="form__input form__name" type="text" id="name" placeholder="Имя" value="Жак-Ив Кусто">
-            <input class="form__input form__about" type="text" id="work" placeholder="О себе" value="Исследователь океана">
+            <input class="form__input form__name" type="text" id="name" placeholder="Имя" value="">
+            <input class="form__input form__about" type="text" id="work" placeholder="О себе" value="">
           </fieldset>
           <fieldset class="form__handler">
             <button class="submit-button" type="submit">Сохранить</button>
