--- a/index.html
+++ b/index.html
@@ -10,56 +10,56 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="./pictures/logo.svg" alt="Логотип">
+      <img class="header__logo" src="./images/logo.svg" alt="Логотип">
     </header>
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="./pictures/avatar.jpeg" alt="Аватар">
+        <img class="profile__avatar" src="./images/avatar.jpeg" alt="Аватар">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="edit-button" type="button"><img src="./pictures/editButton.svg" alt="Кнопка редактирования"></button>
-        <button class="add-button" type="button"><img src="./pictures/addButton.svg" alt="Кнопка добавления"></button>
+        <button class="edit-button" type="button"><img src="./images/editButton.svg" alt="Кнопка редактирования"></button>
+        <button class="add-button" type="button"><img src="./images/addButton.svg" alt="Кнопка добавления"></button>
       </section>
       <section class="elements">
         <article class="element">
-          <img class="element__image" src="./pictures/moscow.jpg" alt="Москва">
+          <img class="element__image" src="./images/moscow.jpg" alt="Москва">
           <div class="element__info">
             <h2 class="element__title">Москва</h2>
             <button class="like-button" type="button"></button>
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="./pictures/petersburg.jpg" alt="Санкт-Петербург">
+          <img class="element__image" src="./images/petersburg.jpg" alt="Санкт-Петербург">
           <div class="element__info">
             <h2 class="element__title">Санкт-Петербург</h2>
             <button class="like-button" type="button"></button>
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="./pictures/sochi.jpg" alt="Сочи">
+          <img class="element__image" src="./images/sochi.jpg" alt="Сочи">
           <div class="element__info">
             <h2 class="element__title">Сочи</h2>
             <button class="like-button" type="button"></button>
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="./pictures/suzdal.jpg" alt="Суздаль">
+          <img class="element__image" src="./images/suzdal.jpg" alt="Суздаль">
           <div class="element__info">
             <h2 class="element__title">Суздаль</h2>
             <button class="like-button" type="button"></button>
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="./pictures/tula.jpg" alt="Тула">
+          <img class="element__image" src="./images/tula.jpg" alt="Тула">
           <div class="element__info">
             <h2 class="element__title">Тула</h2>
             <button class="like-button" type="button"></button>
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="./pictures/konstantinovo.jpg" alt="Константиново">
+          <img class="element__image" src="./images/konstantinovo.jpg" alt="Константиново">
           <div class="element__info">
             <h2 class="element__title">Константиново</h2>
             <button class="like-button" type="button"></button>
@@ -76,8 +76,8 @@
         <h3 class="popup__title">Редактировать профиль</h3>
         <form class="form">
           <fieldset class="form__info">
-            <input class="form__input form__name" type="text" id="name" placeholder="Имя" value="">
-            <input class="form__input form__about" type="text" id="work" placeholder="О себе" value="">
+            <input class="form__input form__input_type-name" type="text" id="name" placeholder="Имя" value="">
+            <input class="form__input form__input_type-about" type="text" id="work" placeholder="О себе" value="">
           </fieldset>
           <fieldset class="form__handler">
             <button class="submit-button" type="submit">Сохранить</button>
