--- a/index.html
+++ b/index.html
@@ -23,48 +23,6 @@
         <button class="add-button" type="button"><img src="./images/addButton.svg" alt="Кнопка добавления"></button>
       </section>
       <section class="elements">
-        <article class="element">
-          <img class="element__image" src="./images/moscow.jpg" alt="Москва">
-          <div class="element__info">
-            <h2 class="element__title">Москва</h2>
-            <button class="like-button" type="button"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__image" src="./images/petersburg.jpg" alt="Санкт-Петербург">
-          <div class="element__info">
-            <h2 class="element__title">Санкт-Петербург</h2>
-            <button class="like-button" type="button"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__image" src="./images/sochi.jpg" alt="Сочи">
-          <div class="element__info">
-            <h2 class="element__title">Сочи</h2>
-            <button class="like-button" type="button"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__image" src="./images/suzdal.jpg" alt="Суздаль">
-          <div class="element__info">
-            <h2 class="element__title">Суздаль</h2>
-            <button class="like-button" type="button"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__image" src="./images/tula.jpg" alt="Тула">
-          <div class="element__info">
-            <h2 class="element__title">Тула</h2>
-            <button class="like-button" type="button"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__image" src="./images/konstantinovo.jpg" alt="Константиново">
-          <div class="element__info">
-            <h2 class="element__title">Константиново</h2>
-            <button class="like-button" type="button"></button>
-          </div>
-        </article>
       </section>
     </main>
     <footer class="footer">
@@ -85,6 +43,30 @@
         </form>
       </div>
     </section>
+    <section class="popup popup_place">
+      <div class="popup__container">
+        <button class="close-button close-button_place" type="button"></button>
+        <h3 class="popup__title">Новое место</h3>
+        <form class="form form_add">
+          <fieldset class="form__info">
+            <input class="form__input form__input_type_name form__input_type_card-name" type="text" id="name" placeholder="Название" value="">
+            <input class="form__input form__input_type_about form__input_type_card-link" type="text" id="work" placeholder="Ссылка на картинку" value="">
+          </fieldset>
+          <fieldset class="form__handler">
+            <button class="submit-button" type="submit">Создать</button>
+          </fieldset>
+        </form>
+      </div>
+    </section>
+    <template>
+      <article class="element">
+        <img class="element__image" src="" alt="">
+        <div class="element__info">
+          <h2 class="element__title"></h2>
+          <button class="like-button" type="button"></button>
+        </div>
+      </article>
+    </template>
   </div>
   <script src="./scripts/index.js"></script>
 </body>
