feat: safe submit form

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </form>
       </div>
     </section>
-    <template>
+    <template class="template">
       <article class="element">
         <img class="element__image" src="" alt="">
         <div class="element__info">
