feat: delete and like buttons

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <template class="template">
       <article class="element">
         <img class="element__image" src="" alt="">
+        <button class="delete-button" type=""></button>
         <div class="element__info">
           <h2 class="element__title"></h2>
           <button class="like-button" type="button"></button>
