--- a/index.html
+++ b/index.html
@@ -58,10 +58,14 @@
         </form>
       </div>
     </section>
+    <section class="popup popup__image">
+      <button class="close-button close-button_image" type="button"></button>
+      <img class="element__image popup__image" src="" alt="">
+    </section>
     <template class="template">
       <article class="element">
-        <img class="element__image" src="" alt="">
-        <button class="delete-button" type=""></button>
+        <button class="image-button" type="button"><img class="element__image" src="" alt=""></button>
+        <button class="delete-button" type="button"></button>
         <div class="element__info">
           <h2 class="element__title"></h2>
           <button class="like-button" type="button"></button>
