--- a/index.html
+++ b/index.html
@@ -58,9 +58,12 @@
         </form>
       </div>
     </section>
-    <section class="popup popup__image">
-      <button class="close-button close-button_image" type="button"></button>
-      <img class="element__image popup__image" src="" alt="">
+    <section class="popup popup__card">
+      <div class="popup__card">
+        <button class="close-button_image" type="button"></button>
+        <img class="popup__image" src="" alt="">
+        <p class="popup__text"></p>
+      </div>
     </section>
     <template class="template">
       <article class="element">
