--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </section>
     <section class="popup popup__card">
-      <div class="popup__card">
+      <div class="popup__picture">
         <button class="close-button_image" type="button"></button>
         <img class="popup__image" src="" alt="">
         <p class="popup__text"></p>
