improved test comments

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <h3 class="popup__title">Новое место</h3>
         <form class="form form_add">
           <fieldset class="form__info">
-            <input class="form__input form__input_type_name form__input_type_card-name" type="text" id="name" placeholder="Название" value="">
-            <input class="form__input form__input_type_about form__input_type_card-link" type="text" id="work" placeholder="Ссылка на картинку" value="">
+            <input class="form__input form__input_type_name form__input_type_card-name" type="text" placeholder="Название" value="">
+            <input class="form__input form__input_type_about form__input_type_card-link" type="text" placeholder="Ссылка на картинку" value="">
           </fieldset>
           <fieldset class="form__handler">
             <button class="submit-button" type="submit">Создать</button>
@@ -61,13 +61,13 @@
     <section class="popup popup__card">
       <div class="popup__picture">
         <button class="close-button_image" type="button"></button>
-        <img class="popup__image" src="" alt="">
+        <img class="popup__image" src="#" alt="">
         <p class="popup__text"></p>
       </div>
     </section>
     <template class="template">
       <article class="element">
-        <button class="image-button" type="button"><img class="element__image" src="" alt=""></button>
+        <button class="image-button" type="button"><img class="element__image" src="#" alt=""></button>
         <button class="delete-button" type="button"></button>
         <div class="element__info">
           <h2 class="element__title"></h2>
