--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         </form>
       </div>
     </section>
-    <section class="popup popup__card">
+    <section class="popup popup_card">
       <div class="popup__picture">
-        <button class="close-button_image" type="button"></button>
+        <button class="close-button close-button_image" type="button"></button>
         <img class="popup__image" src="#" alt="">
         <p class="popup__text"></p>
       </div>
