--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
         <h3 class="popup__title">Редактировать профиль</h3>
         <form class="form form_type_info">
           <fieldset class="form__info">
-            <input class="form__input form__input_type_name" type="text" id="name" placeholder="Имя" value="">
-            <input class="form__input form__input_type_about" type="text" id="work" placeholder="О себе" value="">
+            <input id="name-input" class="form__input form__input_type_name" type="text" id="name" placeholder="Имя" value="" required minlength="2" maxlength="40">
+            <span class="form__input-error name-input-error"></span>
+            <input id="about-input"class="form__input form__input_type_about" type="text" id="work" placeholder="О себе" value="" required minlength="2" maxlength="200">
+            <span class="form__input-error about-input-error"></span>
           </fieldset>
           <fieldset class="form__handler">
             <button class="submit-button submit-button_type_save" type="submit">Сохранить</button>
@@ -49,8 +51,10 @@
         <h3 class="popup__title">Новое место</h3>
         <form class="form form_type_add">
           <fieldset class="form__info">
-            <input class="form__input form__input_type_card-name" type="text" placeholder="Название" value="">
-            <input class="form__input form__input_type_card-link" type="text" placeholder="Ссылка на картинку" value="">
+            <input id='place-input' class="form__input form__input_type_card-name" type="text" placeholder="Название" value="" required minlength="2" maxlength="30">
+            <span class="place-input-error form__input-error"></span>
+            <input id='link-input' class="form__input form__input_type_card-link" type="url" placeholder="Ссылка на картинку" value="" required>
+            <span class="link-input-error form__input-error"></span>
           </fieldset>
           <fieldset class="form__handler">
             <button class="submit-button submit-button_type_add" type="submit">Создать</button>
@@ -77,6 +81,7 @@
     </template>
   </div>
   <script src="./scripts/cards.js"></script>
+  <script src="./scripts/validate.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
 </html>
