--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
       <div class="popup__container">
         <button class="close-button close-button_type_info" type="button"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
-        <form class="form form_type_info">
+        <form class="form popup__form form_type_info">
           <fieldset class="form__info">
-            <input id="name-input" class="form__input form__input_type_name" type="text" id="name" placeholder="Имя" value="" required minlength="2" maxlength="40">
-            <span class="form__input-error name-input-error"></span>
-            <input id="about-input"class="form__input form__input_type_about" type="text" id="work" placeholder="О себе" value="" required minlength="2" maxlength="200">
-            <span class="form__input-error about-input-error"></span>
+            <input id="name-input" class="form__input popup__input form__input_type_name" type="text" id="name" placeholder="Имя" value="" required minlength="2" maxlength="40">
+            <span class="form__input-error popup__input_type_error name-input-error"></span>
+            <input id="about-input"class="form__input popup__input form__input_type_about" type="text" id="work" placeholder="О себе" value="" required minlength="2" maxlength="200">
+            <span class="form__input-error popup__input_type_error about-input-error"></span>
           </fieldset>
           <fieldset class="form__handler">
-            <button class="submit-button submit-button_type_save" type="submit">Сохранить</button>
+            <button class="submit-button popup__button submit-button_type_save" type="submit">Сохранить</button>
           </fieldset>
         </form>
       </div>
@@ -49,15 +49,15 @@
       <div class="popup__container">
         <button class="close-button close-button_type_place" type="button"></button>
         <h3 class="popup__title">Новое место</h3>
-        <form class="form form_type_add">
+        <form class="form popup__form form_type_add">
           <fieldset class="form__info">
-            <input id='place-input' class="form__input form__input_type_card-name" type="text" placeholder="Название" value="" required minlength="2" maxlength="30">
-            <span class="place-input-error form__input-error"></span>
-            <input id='link-input' class="form__input form__input_type_card-link" type="url" placeholder="Ссылка на картинку" value="" required>
-            <span class="link-input-error form__input-error"></span>
+            <input id='place-input' class="form__input popup__input form__input_type_card-name" type="text" placeholder="Название" value="" required minlength="2" maxlength="30">
+            <span class="place-input-error popup__input_type_error form__input-error"></span>
+            <input id='link-input' class="form__input popup__input form__input_type_card-link" type="url" placeholder="Ссылка на картинку" value="" required>
+            <span class="link-input-error popup__input_type_error form__input-error"></span>
           </fieldset>
           <fieldset class="form__handler">
-            <button class="submit-button submit-button_type_add" type="submit">Создать</button>
+            <button class="submit-button popup__button submit-button_type_add" type="submit">Создать</button>
           </fieldset>
         </form>
       </div>
