--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <div class="popup__container">
         <button class="close-button close-button_type_info" type="button"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
-        <form class="form popup__form form_type_info">
+        <form class="form popup__form form_type_info" novalidate>
           <fieldset class="form__info">
-            <input id="name-input" class="form__input popup__input form__input_type_name" type="text" id="name" placeholder="Имя" value="" required minlength="2" maxlength="40">
+            <input id="name-input" class="form__input popup__input form__input_type_name" type="text" placeholder="Имя" value="" required minlength="2" maxlength="40">
             <span class="form__input-error popup__input_type_error name-input-error"></span>
-            <input id="about-input"class="form__input popup__input form__input_type_about" type="text" id="work" placeholder="О себе" value="" required minlength="2" maxlength="200">
+            <input id="about-input"class="form__input popup__input form__input_type_about" type="text" placeholder="О себе" value="" required minlength="2" maxlength="200">
             <span class="form__input-error popup__input_type_error about-input-error"></span>
           </fieldset>
           <fieldset class="form__handler">
@@ -49,7 +49,7 @@
       <div class="popup__container">
         <button class="close-button close-button_type_place" type="button"></button>
         <h3 class="popup__title">Новое место</h3>
-        <form class="form popup__form form_type_add">
+        <form class="form popup__form form_type_add" novalidate>
           <fieldset class="form__info">
             <input id='place-input' class="form__input popup__input form__input_type_card-name" type="text" placeholder="Название" value="" required minlength="2" maxlength="30">
             <span class="place-input-error popup__input_type_error form__input-error"></span>
