--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <form class="form form_type_info" novalidate>
           <fieldset class="form__info">
             <input id="name-input" class="form__input form__input_type_name" type="text" placeholder="Имя" value="" required minlength="2" maxlength="40">
-            <span class="name-input-error"></span>
+            <span id="name-input-error"></span>
             <input id="about-input"class="form__input popup__input form__input_type_about" type="text" placeholder="О себе" value="" required minlength="2" maxlength="200">
-            <span class="about-input-error"></span>
+            <span id="about-input-error"></span>
           </fieldset>
           <fieldset class="form__handler">
             <button class="submit-button submit-button_type_save" type="submit">Сохранить</button>
@@ -52,9 +52,9 @@
         <form class="form form_type_add" novalidate>
           <fieldset class="form__info">
             <input id='place-input' class="form__input form__input_type_card-name" type="text" placeholder="Название" value="" required minlength="2" maxlength="30">
-            <span class="place-input-error"></span>
+            <span id="place-input-error"></span>
             <input id='link-input' class="form__input form__input_type_card-link" type="url" placeholder="Ссылка на картинку" value="" required>
-            <span class="link-input-error"></span>
+            <span id="link-input-error"></span>
           </fieldset>
           <fieldset class="form__handler">
             <button class="submit-button popup__button submit-button_type_add" type="submit">Создать</button>
