--- a/index.html
+++ b/index.html
@@ -80,8 +80,6 @@
       </article>
     </template>
   </div>
-  <script src="./scripts/cards.js"></script>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
