--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
       </article>
     </template>
   </div>
-  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./pages/index.js"></script>
 </body>
 </html>
