--- a/src/index.html
+++ b/src/index.html
@@ -64,13 +64,13 @@
     <section class="popup popup_type_card">
       <div class="popup__picture">
         <button class="close-button close-button_type_image" type="button"></button>
-        <img class="popup__image" src="" alt="">
+        <img class="popup__image" src="#" alt="">
         <p class="popup__text"></p>
       </div>
     </section>
     <template class="template">
       <article class="element">
-        <button class="image-button" type="button"><img class="element__image" src="" alt=""></button>
+        <button class="image-button" type="button"><img class="element__image" src="#" alt=""></button>
         <button class="delete-button" type="button"></button>
         <div class="element__info">
           <h2 class="element__title"></h2>
