--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
         <h3 class="popup__title">Обновить аватар</h3>
         <form class="form form_type_avatar" novalidate>
           <fieldset class="form__info form__info_type_avatar">
-            <input id="avatar-input" class="form__input form__input_type_avatar" type="url" placeholder="Ссылка на фото" name="name" value="" required>
+            <input id="avatar-input" class="form__input form__input_type_avatar" type="url" placeholder="Ссылка на фото" name="link" value="" required>
             <span id="avatar-input-error"></span>
           </fieldset>
           <fieldset class="form__handler">
